methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:41: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsPicture'
override def run(){
             ^